@@ -18,7 +18,7 @@ output_format = \  $(name)s {$(alias)s, $(completed)s}
                 \    $(is_private)s $(is_open)s $(is_active)s P$(prio)d  $(done)5.1f%%%%%%%%  R:$(ratio)6.2f  SZ:$(size.sz)s  U:$(up.sz)s/s  D:$(down.sz)s/s T:$(throttle)s  $(message)s
 
 # The default output format for actions
-action_format = $(action)8s $(name)s {$(alias)s}
+action_format = $(now.iso)16.16s $(action)8s $(name)s {$(alias)s}
 
 # How often to repeat headers when --column-headers is used
 output_header_frequency = 30
