@@ -5,9 +5,10 @@ pyroscope (0.3.5) hardy; urgency=low
   * rtcontrol: All named custom attributes are available as "custom_NAME"
   * rtcontrol: Added --column-headers option
   * Configurable output formats added ("rtcontrol -o format_name")
+  * Output formatting: system field "now" and format spec ".iso" for dates
   * xmlrpc-c is now checked for 64 bit support when connecting
 
- -- pyroscope <pyroscope.project@gmail.com>  Wed, 18 Aug 2010 00:37:40 +0200
+ -- pyroscope <pyroscope.project@gmail.com>  Thu, 19 Aug 2010 20:10:22 +0200
 
 pyroscope (0.3.4) hardy; urgency=low
 
